Fix bug when there is zero new cards in the first session of the day